--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Ruby on Rails Tut Sample App | <%= @title %></title>
+    <title><%= title %></title>
     <%= csrf_meta_tag %>
   </head>
   <body>
     <%= yield %>
   </body>
-</html>  
+</html>       
