--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,4 +1,4 @@
-    <h1>Pages#home</h1>
+    <h1>Pages#about</h1>
     <p>Find me in app/views/pages/about.html.erb</p>
     
     <p>lorem ipsum</p>
