--- a/public/stylesheets/custom.css
+++ b/public/stylesheets/custom.css
@@ -1,4 +1,6 @@
-.container {width:710px;}
+.container {
+  width: 710px;
+}
 
 body {
   background: #cff;
@@ -20,6 +22,10 @@ section {
   background: #fff;
 }
 
+section h1 {
+  font-size: 200%;
+}
+
 /* Links */
 
 a {
@@ -27,19 +33,25 @@ a {
   text-decoration: none;
 }
 
-
 a:hover {
   color: #069;
   text-decoration: underline;
 }
 
 a:visited {
-  color: #69
+  color: #069;
 }
+
+
+
+/* Navigation */
 
 nav {
   float: right;
-  background: #fff;
+}
+
+nav {
+  background-color: white;
   padding: 0 0.7em;
   white-space: nowrap;
 }
@@ -66,4 +78,44 @@ nav ul li a:visited {
 
 nav ul li a:hover {
   text-decoration: underline;
+}
+
+
+/* Sign up button */
+
+a.signup_button {
+  margin-left: auto;
+  margin-right: auto;
+  display: block;
+  text-align: center;
+  width: 190px;
+  color: #fff;
+  background: #006400;
+  font-size: 150%;
+  font-weight: bold;
+  padding: 20px;
+}
+
+
+
+/* Round corners */
+
+.round {
+  -moz-border-radius:    10px;
+  -webkit-border-radius: 10px;
+  border-radius:         10px;
+}
+
+
+
+footer {
+  text-align: center;
+  margin-top: 10px;
+  width: 710px;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+footer nav {
+  float: none;
 }
