Added layout links with routes

--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,4 +1,2 @@
-    <h1>Pages#about</h1>
-    <p>Find me in app/views/pages/about.html.erb</p>
-    
-    <p>lorem ipsum</p>
+    <h1>About</h1>
+    <p>Sample App is a project to make a simple twitter like web application, using <a href="http://rubyonrails.org">Ruby on Rails</a>.</p>
