--- a/app/views/pages/contact.html.erb
+++ b/app/views/pages/contact.html.erb
@@ -1,5 +1,4 @@
-    <h1>Pages#contact</h1>
-    <p>Find me in app/views/pages/contact.html.erb</p>
+    <h1>Contact</h1>
+    <p>Contact Pearance about the sample app at the <a href="#">feedback page</a></p>
 
-    <p>lorem ipsum en</p>
 
